tests/ui/feature-gates/feature-gate-asm_const.stderr
error[E0658]: const operands for inline assembly are unstable
  --> $DIR/feature-gate-asm_const.rs:6:25
   |
LL |     asm!("mov eax, {}", const N + 1);
   |                         ^^^^^^^^^^^
   |
   = note: see issue #93332 <https://github.com/rust-lang/rust/issues/93332> for more information
   = help: add `#![feature(asm_const)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const operands for inline assembly are unstable
  --> $DIR/feature-gate-asm_const.rs:13:29
   |
LL |         asm!("mov eax, {}", const 123);
   |                             ^^^^^^^^^
   |
   = note: see issue #93332 <https://github.com/rust-lang/rust/issues/93332> for more information
   = help: add `#![feature(asm_const)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
